k8s/uptimekuma/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptimekuma
  labels:
    app: uptimekuma
  namespace: uptimekuma
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uptimekuma
  template:
    metadata:
      labels:
        app: uptimekuma
    spec:
      containers:
        - name: uptimekuma
          image: louislam/uptime-kuma:1.23.16
          ports:
            - name: app-port
              containerPort: 3001
          volumeMounts:
            - name: data-volume
              mountPath: /app/data
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: uptimekuma-data-pvc
