k8s/uptimekuma/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: uptimekuma
  name: uptimekuma
  labels:
    app: uptimekuma
spec:
  type: ClusterIP
  ports:
    - name: service-port
      port: 80
      targetPort: app-port
      protocol: TCP
  selector:
    app: uptimekuma
