k8s/uptimekuma/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptimekuma
  namespace: uptimekuma
  annotations:
    kubernetes.io/ingress.ingressClassName: "traefik"
spec:
  rules:
    - host: uptimekuma.twop.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uptimekuma
                port:
                  number: 80
